--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
     background-image: url(./img/cork.png);
+    background-size: contain;
     margin: 0;
 }
 
@@ -12,6 +13,18 @@ h1 {
     font-size: 3rem;
     background-image: url(./img/wall.png);
     margin-top: 0%;
+}
+
+h3 {
+    font-size: 1rem;
+    margin-top: 0;
+    text-align: start;
+}
+
+p {
+    font-size: 1.1rem;
+    color: #333;
+    text-align: start;
 }
 
 .board {
